src/components/theme-switcher/theme-switcher.module.scss
@import "../../styles/theme";

@mixin toggle_button {
  opacity: 0.65;
  position: relative;
  border-radius: 5px;
  width: 40px;
  height: 25px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: opacity 0.3s ease;
  border: none;
  outline: none;
  background: none;
  cursor: pointer;
  padding: 0;
  appearance: none;
  margin-top: 20px;

  &:hover,
  &:focus {
    opacity: 1;
  }
}

.moon {
  @include toggle_button;
  position: relative;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  border: none;
  background-color: transparent;
  transform: scale(1);
  transition: all 0.45s ease;
  overflow: hidden;
  box-shadow: inset 8px -8px 0px 0px #617073;

  &:before,
  &::after {
    content: " ";
    position: absolute;
    border-radius: 50%;
  }

  &:before {
    right: -9px;
    top: -9px;
    height: 24px;
    width: 24px;
    border: none;
    transform: translate(0, 0);
    opacity: 1;
    transition: transform 0.45s ease;
  }

  &:after {
    width: 8px;
    height: 8px;
    margin: -4px 0 0 -4px;
    top: 50%;
    left: 50%;
    box-shadow: 0 -23px 0 #617073, 0 23px 0 #617073, 23px 0 0 #617073,
      -23px 0 0 #617073, 15px 15px 0 #617073, -15px 15px 0 #617073,
      15px -15px 0 #617073, -15px -15px 0 #617073;
    transform: scale(0);
    transition: all 0.35s ease;
  }
}

.sun {
  @include toggle_button;
  position: relative;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  border: 4px solid #617073;
  background-color: #617073;
  transform: scale(0.55);
  transition: all 0.45s ease;
  overflow: visible;
  box-shadow: none;

  &:before,
  &::after {
    content: " ";
    position: absolute;
    border-radius: 50%;
  }

  &:before {
    right: -9px;
    top: -9px;
    height: 24px;
    width: 24px;
    border: 2px solid #617073;
    transform: translate(14px, -14px);
    opacity: 0;
    transition: transform 0.45s ease;
  }

  &:after {
    width: 8px;
    height: 8px;
    margin: -4px 0 0 -4px;
    top: 50%;
    left: 50%;
    box-shadow: 0 -23px 0 #617073, 0 23px 0 #617073, 23px 0 0 #617073,
      -23px 0 0 #617073, 15px 15px 0 #617073, -15px 15px 0 #617073,
      15px -15px 0 #617073, -15px -15px 0 #617073;
    transform: scale(1);
    transition: all 0.35s ease;
  }
}

